--- a/views/blacklist.ejs
+++ b/views/blacklist.ejs
@@ -12,7 +12,7 @@
                 <input type="image" src="/assets/icon/ring.svg" alt="ring" class="image-rating">
                 <div>
                 <p class="rate-item-quote">“<%= quote.dialog %>”</p>
-                <p class="rate-item-character">Character: <a href="#">Baby Yoda</a></p>
+                <p class="rate-item-character">Character: <a href="#"><%=rates[i].character%></a></p>
                 <p class="blacklist-item-reason">Reason: <%= rates[i].reason %></p>
 
                 <section class="blacklist-edit">
