--- a/public/css/main.css
+++ b/public/css/main.css
@@ -629,13 +629,19 @@ header .account-header-piece {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  margin-top: 3rem;
+  margin-top: 1.5rem;
   text-align: center;
 }
 
 #quiz-page #quiz-box #quiz-main .quiz-like-panel input[type="image"] {
   width: 30px;
   height: 30px;
+}
+
+@media only screen and (min-width: 750px) {
+  #quiz-page #quiz-box #quiz-main .quiz-like-panel {
+    margin-top: 2rem;
+  }
 }
 
 #quiz-page #quiz-box #quiz-main .quiz-like-panel #reason-dislike-popup {
@@ -657,6 +663,10 @@ header .account-header-piece {
           column-gap: 1rem;
 }
 
+#quiz-page #quiz-box #quiz-main .quiz-like-panel #reason-dislike-popup div textarea {
+  width: 100%;
+}
+
 #quiz-page #quiz-box #quiz-main .quiz-like-panel #reason-dislike-popup div input[type="image"] {
   margin-top: 0.3rem;
 }
@@ -664,9 +674,16 @@ header .account-header-piece {
 #quiz-page #quiz-box #quiz-main .gamemode-buttons .gamemode-button {
   margin: 0 auto;
   display: block;
-  width: 300px;
-  height: 300px;
+  width: 200px;
+  height: 200px;
   margin-top: 3rem;
+}
+
+@media only screen and (min-width: 750px) {
+  #quiz-page #quiz-box #quiz-main .gamemode-buttons .gamemode-button {
+    width: 300px;
+    height: 300px;
+  }
 }
 
 @media only screen and (min-width: 518px) {
@@ -711,6 +728,13 @@ header .account-header-piece {
 /* #region Scoreboard Page */
 .scoreboard-display {
   text-align: center;
+  margin-bottom: 1rem;
+}
+
+@media only screen and (min-width: 750px) {
+  .scoreboard-display {
+    font-size: 2rem;
+  }
 }
 
 #score-table {
@@ -722,9 +746,36 @@ header .account-header-piece {
   padding: 0.5rem 1rem;
 }
 
+@media only screen and (min-width: 750px) {
+  #score-table th,
+  #score-table td {
+    padding: 0.5rem 2rem;
+  }
+}
+
+@media only screen and (min-width: 1080px) {
+  #score-table th,
+  #score-table td {
+    padding: 0.5rem 4rem;
+  }
+}
+
+@media only screen and (min-width: 1920px) {
+  #score-table th,
+  #score-table td {
+    padding: 0.5rem 6rem;
+  }
+}
+
 #score-table thead th {
-  font-size: 2rem;
+  font-size: 1.1rem;
   font-weight: bold;
+}
+
+@media only screen and (min-width: 518px) {
+  #score-table thead th {
+    font-size: 2.5rem;
+  }
 }
 
 #score-table tbody .ranked td {
@@ -777,10 +828,10 @@ header .account-header-piece {
   padding-bottom: 0.3rem;
   background-color: var(--c-overlay-background);
   width: 98%;
-  padding: 15px;
+  padding: 10px 5px;
   border-radius: 25px;
   max-width: 90%;
-  min-width: 378px;
+  min-width: 350px;
 }
 
 @media only screen and (min-width: 750px) {
@@ -815,6 +866,10 @@ header .account-header-piece {
   display: flex;
   -webkit-column-gap: 1rem;
           column-gap: 1rem;
+}
+
+.rate-item .blacklist-edit div textarea {
+  width: 100%;
 }
 
 .rate-item .rate-left {
