--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -562,12 +562,16 @@ header {
             .quiz-like-panel {
                 margin: 0 auto;
                 width: fit-content;
-                margin-top: 3rem;
+                margin-top: 1.5rem;
                 text-align: center;
 
                 input[type="image"] {
                     width: 30px;
                     height: 30px;
+                }
+
+                @include devices(desktop) {
+                    margin-top: 2rem;
                 }
 
                 #reason-dislike-popup {
@@ -579,6 +583,11 @@ header {
                     text-align: center;
 
                     div {
+
+                        textarea {
+                            width: 100%;
+                        }
+
                         display: flex;
                         column-gap: 1rem;
                         input[type="image"] {
@@ -592,9 +601,14 @@ header {
                 .gamemode-button {
                     margin: 0 auto;
                     display: block;
-                    width: 300px;
-                    height: 300px;
+                    width: 200px;
+                    height: 200px;
                     margin-top: 3rem;
+
+                    @include devices(desktop) {
+                        width: 300px;
+                        height: 300px;
+                    }
                 }
 
                 @include devices(tablet) {
@@ -605,6 +619,7 @@ header {
                     transform: translateX(-50%) translateY(-50%);
                     top: 50%;
                     gap: 5rem;
+
                 }
             }
         }
@@ -638,6 +653,11 @@ header {
 
 .scoreboard-display {
     text-align: center;
+    margin-bottom: 1rem;
+
+    @include devices(desktop) {
+        font-size: 2rem;
+     }
 }
 
 #score-table {
@@ -646,12 +666,28 @@ header {
     th,
     td {
         padding: 0.5rem 1rem;
+
+        @include devices(desktop) {
+            padding: 0.5rem 2rem;
+        }
+
+        @include devices(wide) {
+            padding: 0.5rem 4rem;
+        }
+
+        @include devices(uwide) {
+            padding: 0.5rem 6rem;
+        }
     }
 
     thead {
         th {
-            font-size: 2rem;
+            font-size: 1.1rem;
             font-weight: bold;
+
+            @include devices(tablet) {
+                font-size: 2.5rem;
+            }
         }
     }
 
@@ -710,10 +746,10 @@ header {
 
     background-color: var(--c-overlay-background);
     width: 98%;
-    padding: 15px;
+    padding: 10px 5px;
     border-radius: 25px;
     max-width: 90%;
-    min-width: 378px;
+    min-width: 350px;
 
     @include devices(desktop) {
         max-width: 1200px;
@@ -739,6 +775,10 @@ header {
         padding: 15px 0;
 
         div {
+            textarea {
+                width: 100%;
+            }
+
             display: flex;
             column-gap: 1rem;
         }
