--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,7 +42,7 @@ body {
   background-color: var(--c-main-background);
 }
 
-h1 {
+h1, li {
   color: var(--c-main-title);
   font-size: 2rem;
 }
@@ -177,17 +177,14 @@ header .big_navigation > ul > li > ul {
           transform-origin: top center;
 }
 
-header .big_navigation > ul > li > ul > li {
+header .big_navigation > ul > li > ul > a > li {
   width: 100px;
   text-align: center;
   border-top: solid 3px var(--c-main-title);
-}
-
-header .big_navigation > ul > li > ul > li a {
   font-size: 1rem;
 }
 
-header .big_navigation > ul > li > ul > li:last-of-type {
+header .big_navigation > ul > li > ul > a:last-of-type > li {
   border-bottom: solid 3px var(--c-main-title);
 }
 
