--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -761,6 +761,10 @@ header {
 
     .image-rating {
         margin-right: 1rem;
+        width: 60px;
+        height: 60px;
+        margin-left: 0.3rem;
+        border-radius: 50%;
     }
 
     .blacklist-edit {
