added closing tag

--- a/views/favoriteCharacters.ejs
+++ b/views/favoriteCharacters.ejs
@@ -12,7 +12,7 @@
      <%characters.forEach((character)=>{%>
         <article name="<%=character._id%>" class="character-item">
                 <div class="rate-left">
-                        <img src="<%=character.imageLocation" alt="ring" class="image-character">
+                        <img src="<%=character.imageLocation%>" alt="ring" class="image-character">
                 <div>
                 <p class="item-character">Character: <a href="<%=character.wikiURL%>"><%= character.name%></a></p>
                 <div class="character-quotes">
