--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,6 +26,7 @@
                 <li><a href="./index" class="">Home</a></li>
                 <li><a href="./quiz" class="">Quiz</a></li>
                 <li><a href="./favorites" class="">Favorites</a></li>
+                <li><a href="./favoritecharacters">Characters</a></li>
                 <li><a href="./blacklist" class="">Blacklist</a></li>
 
                 <%if(isLoggedIn) {%>
