--- a/public/css/main.css
+++ b/public/css/main.css
@@ -42,7 +42,8 @@ body {
   background-color: var(--c-main-background);
 }
 
-h1, li {
+h1,
+li {
   color: var(--c-main-title);
   font-size: 2rem;
 }
@@ -851,6 +852,7 @@ header .account-header-piece {
   margin-right: 1rem;
   width: 60px;
   height: 60px;
+  min-width: 60px;
   margin-left: 0.3rem;
   border-radius: 50%;
 }
@@ -880,6 +882,17 @@ header .account-header-piece {
 .rate-item .rate-right {
   -webkit-column-gap: 1rem;
           column-gap: 1rem;
+}
+
+.rate-item .invisible-content {
+  display: none;
+}
+
+.rate-item:hover .invisible-content {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: block;
 }
 
 /* #endregion */
